--- a/index.css
+++ b/index.css
@@ -4,6 +4,13 @@ body {
   color: white;
 }
 
+a {
+  color: lightskyblue;
+}
+a:hover {
+  color: lightseagreen;
+}
+
 @font-face {
   font-family: sunflower;
   src: url(Sunflower-Light.ttf);
@@ -28,3 +35,29 @@ h2{
   padding: 1em;
 }
 
+ /* This styling adds functionality to the collapsible menus. 
+    Stolen from https://www.w3schools.com/howto/howto_js_collapsible.asp */
+ .collapsible {
+  background-color: #444;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #556;
+} 
